fixed spacing on code/design grp for mobile

--- a/about-me/about-me-style.css
+++ b/about-me/about-me-style.css
@@ -98,7 +98,7 @@ li {
 .code-design {
   display: flex;
   flex-wrap:wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   font-size: 0;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -108,7 +108,6 @@ li {
   order: 0;
   margin:0;
   padding-bottom: 20px;
-  width: 200px;
 }
 
 .code-grp {
